# phytena

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260523_0001_core_schema.py
app/: __init__.py  config.py  db.py  dependencies.py  growz_db.py  growz_models.py  growz_rag_models.py  logging.py  main.py  models.py  schemas.py
app/admin/: routes.py
app/clients/: embeddings.py  gemini.py  growz.py
app/eval/: __init__.py  runner.py
app/fusion/: __init__.py  confidence.py  decisions.py
app/llm/: __init__.py  prompts.py
app/pipelines/: __init__.py  base.py  hybrid_rag.py  hybrid_rag_rerank.py  image_guard.py  pure_llm.py  runner.py  stub_utils.py
app/rag/: __init__.py  normalize.py  retrieve.py  rrf.py
docs/: ai-agronomy-assistant-architecture-plan.md
growz-eval/: .gitignore  README.md  build_golden_set.py  pyproject.toml  verify_labels.py
growz-eval/growz_eval/: __init__.py  config.py  logging_utils.py
growz-eval/growz_eval/cli/: build.py  verify.py
growz-eval/growz_eval/datasets/: __init__.py  downloaders.py  manager.py  registry.py
growz-eval/growz_eval/golden_set/: __init__.py  builder.py  classifier.py  models.py  sampler.py  scanner.py  writer.py
growz-eval/growz_eval/io_csv/: __init__.py  repo.py
growz-eval/growz_eval/verification/: __init__.py  decision.py  models.py  pipeline.py  prompts.py  reviewers.py
growz-eval/tests/: test_classifier.py  test_decision.py  test_reviewers.py  test_sampler.py
scripts/: check_emb_dim.py  crops.json  growz_illness.json  import_all_treatments.py  import_crops.py  import_growz.py  ingest_kb.py  list_models.py  seed_growz_rag.py  treaments.json
tests/: conftest.py  test_admin_routes.py  test_eval_routes.py  test_fusion.py  test_gemini_client.py  test_health.py  test_image_input.py  test_image_quality.py  test_models.py  test_query_routes.py  test_rag.py  test_safety.py
(+13 files in other folders)
